skaffold/k8s/k8s-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - name: postgresql
          image: postgres:13
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-storage
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["psql", "-w", "-U", "firstvoices", "-d", "firstvoices", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["psql", "-w", "-U", "firstvoices", "-d", "firstvoices", "-c", "SELECT 1"]
            initialDelaySeconds: 45
            timeoutSeconds: 2
  selector:
    matchLabels:
      app: postgres
