skaffold/k8s/k8s-firstvoices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstvoices
spec:
  replicas: 1
  minReadySeconds: 20
  template:
    metadata:
      name: firstvoices-pod
      labels:
        app: firstvoices
    spec:
      containers:
        - name: firstvoices
          image: firstvoices
          ports:
            - name: http-in
              containerPort: 8080
            - name: java-debug
              containerPort: 8787
  selector:
    matchLabels:
      app: firstvoices
---
apiVersion: v1
kind: Service
metadata:
  name: firstvoices
spec:
  selector:
    app: firstvoices
  ports:
    - name: http-in
      port: 8080
      targetPort: 8080
    - name: java-debug
      port: 8787
      targetPort: 8787
