skaffold/k8s/k8s-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      name: envoy-pod
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoy
          ports:
            - name: admin
              containerPort: 9901
            - name: http-in
              containerPort: 10000
  selector:
    matchLabels:
      app: envoy
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - name: http-in
      port: 10000
      targetPort: 10000
    - name: admin
      port: 9901
      targetPort: 9901
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: envoy
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fv.iron.mapleleaf.intranet
      http:
        paths:
        - path: /
          backend:
            serviceName: envoy
            servicePort: 10000
